<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    android:background="@drawable/mainbggradient"
    android:paddingTop="70dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benji_quizzes"
        android:textColorHighlight="@color/on_background"
        android:textColor="@color/light_blue_primary_pressed"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:drawablePadding="8dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:padding="10dp"
        app:drawableTopCompat="@drawable/funcircle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/curved_border_background"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16sp"
            android:padding="4dp"
            android:text="@string/question"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="17sp"
            android:background="@drawable/underquestion"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="10sp"
            android:background="@drawable/button2"
            android:text="@string/option1"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:elevation="4dp"
            tools:ignore="SmallSp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:background="@drawable/button2"
            android:text="@string/option2"
            android:textStyle="bold"
            android:textSize="10sp"
            android:fontFamily="sans-serif-condensed-light"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/button2"
            android:text="@string/option3"
            android:layout_marginBottom="10dp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/Restart"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttons"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="5dp"
            android:text="@string/restart"
            android:textAlignment="center"
            android:layout_gravity="end"
            android:textColor="@color/deep_space_blue"
            android:textSize="10sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="RtlCompat,SmallSp" />

    </LinearLayout>


</LinearLayout>